tests/instantiating/invalid_reset_value/stderr.golden
error: 'reset' property must be "Sync" or "Async", current value "Abc"
bus.fbd +2:10
   |
 2 | 	reset = "Abc"
   | 	        ^^^^^
